# CA2-Bugs-Life

./: Board.cpp  Board.h  Bug.cpp  Bug.h  CMakeLists.txt  Crawler.cpp  Crawler.h  Directions.h  Hopper.cpp  Hopper.h  Ladybird.cpp  Ladybird.h  README.md  bugs.txt  bugs_life_history_date_time.out  main.cpp
